--- a/style.css
+++ b/style.css
@@ -3,17 +3,28 @@
     color: #131318;
 }
 
-.common-btn{
+.common-btn {
     display: inline-flex;
-justify-content: center;
-align-items: center;
-gap: 10px;
-padding: 1rem 1.5rem;
-border-radius: 8px;
-background: #FF4240;
-color: #FFF;
-text-align: center;
-font-size: 20px;
-font-weight:700;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 1.5rem;
+    border-radius: 8px;
+    background: #FF4240;
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+}
 
+.common-btn-mobile {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    border-radius: 8px;
+    background: #FF4240;
+    color: #FFF;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 700;
 }
