added section 01 and 02

--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     font-family: 'Manrope', sans-serif;
     color: #131318;
 }
+.text-color{
+    color: #13131899;
+}
 
 .common-btn {
     display: inline-flex;
